# pinit

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
pinit/: __init__.py  cli.py  extractor.py  pinboard_client.py
