[project]
name = "pinit"
version = "0.1.0"
description = "AI-powered Pinboard bookmark manager using Claude Sonnet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "llm>=0.25",
    "llm-anthropic>=0.16",
    "pinboard>=2.1.9",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
pinit = "pinit.cli:main"
